--- a/gulimall-product/pom.xml
+++ b/gulimall-product/pom.xml
@@ -37,6 +37,13 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <version>2.3.1.RELEASE</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.aliyun.oss</groupId>-->
+<!--            <artifactId>aliyun-sdk-oss</artifactId>-->
+<!--            <version>3.5.0</version>-->
+<!--        </dependency>-->
+
+
     </dependencies>
 
     <dependencyManagement>
